// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText empty matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-5oul0u r-width-13qz1uu"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-5oul0u r-width-13qz1uu"
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-11aywtz r-backgroundColor-14lw9ot r-borderBottomColor-1ny7kx0 r-borderBottomWidth-qklmqi r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-1i10wst r-paddingHorizontal-1dye5f7 r-paddingVertical-oyd9sg r-placeholderTextColor-1xktb6b r-textAlign-q4m81j"
        data-focusable={true}
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onSelect={[Function]}
        onTouchStart={[Function]}
        readOnly={false}
        spellCheck={true}
        type="text"
      />
    </div>
    <div
      className="css-text-901oao r-paddingVertical-oyd9sg r-textAlign-q4m81j"
      dir="auto"
      style={
        Object {
          "WebkitTransform": "translateY(0px)",
          "color": "rgba(250,108,119,1.00)",
          "direction": "ltr",
          "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "fontWeight": "400",
          "height": "18px",
          "opacity": 0,
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "12px",
          "paddingTop": "0px",
          "transform": "translateY(0px)",
        }
      }
    />
  </div>
</div>
`;

exports[`InputText matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-5oul0u r-width-13qz1uu"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-5oul0u r-width-13qz1uu"
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-11aywtz r-backgroundColor-14lw9ot r-borderBottomColor-1ny7kx0 r-borderBottomWidth-qklmqi r-color-cddv6f r-fontFamily-6jnb14 r-fontSize-1i10wst r-paddingHorizontal-1dye5f7 r-paddingVertical-oyd9sg r-placeholderTextColor-1xktb6b r-textAlign-q4m81j"
        data-focusable={true}
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onSelect={[Function]}
        onTouchStart={[Function]}
        readOnly={false}
        spellCheck={true}
        type="text"
        value="Text"
      />
    </div>
    <div
      className="css-text-901oao r-paddingVertical-oyd9sg r-textAlign-q4m81j"
      dir="auto"
      style={
        Object {
          "WebkitTransform": "translateY(0px)",
          "color": "rgba(250,108,119,1.00)",
          "direction": "ltr",
          "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "fontWeight": "400",
          "height": "18px",
          "opacity": 0,
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "12px",
          "paddingTop": "0px",
          "transform": "translateY(0px)",
        }
      }
    />
  </div>
</div>
`;
